# urlquick

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Pipfile  README.md  README.rst  requests_caching.py  setup.cfg  setup.py  tox.ini  urllib_caching.py  urlquick.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  python-test.yml
docs/: Makefile  README.md  README.rst  conf.py  index.rst
test/: conftest.py  test_misc.py  test_session.py
tests/: conftest.py  test_misc.py  test_response.py  test_session.py  test_urlquick.py
