[metadata]
name = urlquick
version = 2.0.0
author = William Forde
author_email = willforde@gmail.com
description = Requests wrapper that add's support for HTTP caching. It act's just like requests but with a few extra parameters and features.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/willforde/urlquick
project_urls =
    Documentation = http://urlquick.readthedocs.io/en/stable/?badge=stable
    Source = https://github.com/willforde/urlquick
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    python
    http
    caching
    requests

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
py_modules = urlquick
include_package_data = true
zip_safe = false
install_requires =
    requests
    htmlement

[options.extras_require]
dev =
    tox
    pytest
    pytest-cov
    pytest-mock

[flake8]
max-line-length = 120
ignore =
    F403,  # * used, unable to detect undefined names
    F405,  # defined from star imports
    E401   # multiple imports on one line
exclude =
    .tox,
    .git,
    docs,
    tests

[coverage:run]
source=urlquick
branch=True

[coverage:report]
exclude_lines =
    raise MissingDependency
    except ImportError

[bdist_wheel]
universal=1
